--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@ body {
   background: #f5f5f5;
 }
 
-h1 { margin-bottom: 10px; }
-
 textarea {
   width: 100%;
   height: 180px;
@@ -36,27 +34,25 @@ th, td {
   border: 1px solid #ccc;
   padding: 4px 8px;
   font-size: 12px;
+  text-align: center;
 }
 
-th {
-  background: #eee;
-}
+th { background: #eee; }
 
-.mismatch {
-  background: #ffd6d6;
-}
+.mismatch { background: #ffd6d6; }
+.correct { background: #d6ffd6; }
 
-.correct {
-  background: #d6ffd6;
+.tariff-row {
+  background: #f0f8ff;
+  font-weight: bold;
 }
 </style>
 </head>
 <body>
 
-<h1>Procesador de Liquidación</h1>
+<h2>Procesador de Liquidación</h2>
 
 <textarea id="input" placeholder="Pegá acá la tabla copiada..."></textarea>
-
 <button onclick="process()">Procesar</button>
 <button onclick="downloadCSV()">Descargar CSV</button>
 
@@ -68,11 +64,10 @@ let processedData = [];
 function parseMoney(str) {
   if (!str) return 0;
   return Number(
-    str
-      .replace(/\$/g, "")
-      .replace(/\./g, "")
-      .replace(",", ".")
-      .replace(/\s/g, "")
+    str.replace(/\$/g,"")
+       .replace(/\./g,"")
+       .replace(",",".")
+       .replace(/\s/g,"")
   ) || 0;
 }
 
@@ -85,55 +80,90 @@ function process() {
   if (!input) return;
 
   const rows = input.split("\n");
-  const headers = rows[0].split("\t");
+  const originalHeaders = rows[0].split("\t");
 
-  processedData = [];
-  processedData.push([...headers, "TOTAL RECALCULADO", "DIFERENCIA"]);
+  // Identify quantity columns (exclude TARIFA columns)
+  let quantityIndexes = [];
+  let tariffMap = {};
+
+  for (let i = 0; i < originalHeaders.length; i++) {
+    if (!originalHeaders[i].includes("TARIFA")) {
+      quantityIndexes.push(i);
+    } else {
+      // map tariff to previous quantity column
+      tariffMap[i - 1] = i;
+    }
+  }
+
+  let newHeaders = quantityIndexes.map(i => originalHeaders[i]);
+  newHeaders.push("TOTAL RECALCULADO", "DIFERENCIA");
+
+  processedData = [newHeaders];
 
   let html = "<table><tr>";
-  processedData[0].forEach(h => html += "<th>" + h + "</th>");
+  newHeaders.forEach(h => html += "<th>"+h+"</th>");
   html += "</tr>";
 
-  for (let i = 1; i < rows.length; i++) {
-    if (rows[i].startsWith("Suma")) continue;
+  let tariffsRow = Array(newHeaders.length).fill("");
 
-    let cols = rows[i].split("\t");
+  for (let r = 1; r < rows.length; r++) {
+    if (rows[r].startsWith("Suma")) continue;
 
-    function val(i) { return parseMoney(cols[i]); }
+    let cols = rows[r].split("\t");
 
-    let total =
-      val(6)*val(7) +
-      val(8)*val(9) +
-      val(10)*val(11) +
-      val(12)*val(13) +
-      val(14)*val(15) +
-      val(16)*val(17) +
-      val(18)*val(19) +
-      val(20)*val(21) +
-      val(22)*val(23) +
-      val(24)*val(25) +
-      val(26)*val(27) +
-      val(28)*val(29) +
-      parseMoney(cols[30]) +
-      parseMoney(cols[31]);
+    let newRow = [];
 
-    let originalTotal = parseMoney(cols[32]);
+    function val(i){ return parseMoney(cols[i]); }
+
+    let total = 0;
+
+    quantityIndexes.forEach((qi, idx) => {
+      newRow.push(cols[qi]);
+
+      if (tariffMap[qi] !== undefined) {
+        let tariffValue = parseMoney(cols[tariffMap[qi]]);
+        let qtyValue = parseMoney(cols[qi]);
+        total += qtyValue * tariffValue;
+
+        // store tariff only once
+        if (!tariffsRow[idx]) {
+          tariffsRow[idx] = formatMoney(tariffValue);
+        }
+      }
+    });
+
+    // add bonos + excepc if present
+    let bonos = parseMoney(cols[30] || 0);
+    let excepc = parseMoney(cols[31] || 0);
+    total += bonos + excepc;
+
+    let originalTotal = parseMoney(cols[32] || 0);
     let diff = total - originalTotal;
 
-    let rowData = [...cols, total, diff];
-    processedData.push(rowData);
+    newRow.push(formatMoney(total));
+    newRow.push(diff !== 0 ? formatMoney(diff) : "-");
+
+    processedData.push(newRow);
 
     html += "<tr>";
-    cols.forEach(c => html += "<td>" + c + "</td>");
-
-    let className = diff !== 0 ? "mismatch" : "correct";
-
-    html += `<td>${formatMoney(total)}</td>`;
-    html += `<td class="${className}">${diff !== 0 ? formatMoney(diff) : "-"}</td>`;
+    newRow.forEach((cell, i) => {
+      if (i === newRow.length - 1) {
+        html += `<td class="${diff !== 0 ? 'mismatch':'correct'}">${cell}</td>`;
+      } else {
+        html += "<td>"+cell+"</td>";
+      }
+    });
     html += "</tr>";
   }
 
+  // Add tariffs row
+  html += "<tr class='tariff-row'>";
+  html += "<td>TARIFAS</td>";
+  tariffsRow.slice(1).forEach(t => html += "<td>"+t+"</td>");
+  html += "</tr>";
+
   html += "</table>";
+
   document.getElementById("result").innerHTML = html;
 }
 
@@ -144,14 +174,12 @@ function downloadCSV() {
     row.map(cell => `"${cell}"`).join(",")
   ).join("\n");
 
-  const blob = new Blob([csv], { type: "text/csv" });
+  const blob = new Blob([csv], {type:"text/csv"});
   const url = URL.createObjectURL(blob);
-
   const a = document.createElement("a");
   a.href = url;
-  a.download = "liquidacion_corregida.csv";
+  a.download = "liquidacion_procesada.csv";
   a.click();
-
   URL.revokeObjectURL(url);
 }
 </script>
