Skip processing for the first row in filas

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ function procesar() {
     let resultado = [];
 
     filas.forEach((fila, filaIndex) => {
+        if (filaIndex === 0) return;
         let columnas = fila.split("\t");
         let nuevaFila = [];
 
